--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,8 +14,35 @@
         </tr>
       </table>
     </div>
-    
 
+    <div class="row">
+      <div class="col-xs-8 col-sm-10 col-md-10">
+        <h1>Tus PicStories</h1>
+      </div>
+      <div class="col-xs-4 col-sm-2 col-md-2">
+        <%= link_to 'New story', new_story_path, class: "btn btn-info btn-sm" %>
+      </div>
+    </div>
+
+    <% if @user.stories_count > 0 %>
+      <div class="row">
+        <% @user.stories.reverse.each do |story| %>
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <%= link_to(image_tag(story.picture), story) if story.picture? %>
+              <div class="caption">
+                <h3><%= story.title %></h3>
+                <small><%= time_ago_in_words(story.created_at) %> ago</small>
+                <small> by: <%= story.user.name %> </small>
+                <p><%= story.content.truncate(150)  %></p>
+                <p><%= link_to 'Show', story, class: "btn btn-primary" %> <%= link_to 'Edit', edit_story_path(story), class: "btn btn-warning" %> <%= link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% else %>
+      <h3>You have any PicStories, create your <%= link_to 'first PicStory!', new_story_path%> </h3>
+    <% end %>
   <p><%= link_to 'Home', root_path %></p>
-  <p><%= link_to 'Crear otro usuario', new_user_path %></p>
-</div>
+  </div>
